--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<div class="left_side">
-			<h1 id="time">00:00</h1>
+			<h1 id="time">error</h1>
 			<h1 id="day">25</h1>
 			<h1 id="month">октября</h1>
 		</div>
