--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="left_side">
 			<h1 id="time">error</h1>
-			<h1 id="day">24</h1>
+			<h1 id="day">25</h1>
 			<h1 id="month">октября</h1>
 		</div>
 		<div class="right_side">
@@ -23,14 +23,14 @@
 					<h1>+error°C</h1>
 				</div>
 			</div>
-			
+
 			<div class="tasks">
 				<div class="task">
 					<div class="left_task">
-						<h1>22:00</h1>
+						<h1>26.10</h1>
 					</div>
 					<div class="right_task">
-						<h1>Спать</h1>
+						<h1>День рождения</h1>
 					</div>
 				</div>
 			</div>
