--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 			</div>
 		</div>
 	</div>
+	<a href="https://nick-name.ru/nickname/id1505634/"><img src="https://nick-name.ru/img.php?id=1505634&sert=1" alt="Сертификат на никнейм Toarllor, зарегистрирован на vk.com/vabramovich4" border="0" /></a><br /><a href="https://nick-name.ru">Nickname registry</a>
 </body>
 </html>
